<resources>
    <string name="app_name">Introduccion a Android</string>
    <string name="text_left">Este texto está alineado a la izquierda, con un margen vertical de 20dp</string>
    <string name="text_center">Este texto está centrado, con un margen vertical de 100dp</string>
    <string name="text_right">Este texto está alineado a la derecha, con un margen vertical de 200dp</string>
    <string name="button_title">Cambiar</string>
    <string name="change_screen">Cambiar de pantalla</string>
    <string name="text_center_alt">Este texto sigue estando centrado, pero tiene un texto distinto</string>
    <string name="second_screen_title">Hola, soy la segunda pantalla. Gracias por visitarme :)</string>
    <string name="title_activity_main_kotlin">MainKotlinActivity</string>
    <string name="title_activity_another_kotlin">AnotherKotlinActivity</string>
</resources>
